# market-for-context

./: .gitignore  ENDOGENOUS-CONTRACTING.md  HIDDEN-REUSE.md  README.md  START-HERE.md  pyproject.toml
hidden-reuse-result/: AGENTS.md  APPROPRIATION-DRAFT.md  APPROPRIATION-RESULT.md  CITATION.cff  FIGURE.md  FIRM-SIZE-DRAFT.md  FIRM-SIZE-RESULT.md  FULL-EXPOSITION.md  INTERROGATE.md  LICENSE.md  MODEL.md  Makefile  OWNERSHIP-ACCESS-DRAFT.md  OWNERSHIP-ACCESS-RESULT.md  PUBLISHING.md  README.md  REFERENCES.md  RESULT.md  WEBSITE-DRAFT.md  pyproject.toml  requirements-lock.txt
hidden-reuse-result/outputs/: capability-pledgeability-grid.csv  firm-size-entry-grid.csv  firm-size-examples.json  firm-size-run-summary.json  firm-size-scale-grid.csv  hidden-reuse-explorer.html  hidden-reuse-regime-grid.csv  hidden-reuse-run-summary.json  ownership-access-examples.json  ownership-access-explorer.html  ownership-access-grid.csv  ownership-access-robustness.csv  ownership-access-run-summary.json  pareto-capture-benchmark.csv  pledgeability-examples.json  pledgeability-run-summary.json  value-appropriation-examples.json  value-appropriation-explorer.html  value-appropriation-grid.csv  value-appropriation-robustness.csv  value-appropriation-run-summary.json  worked-examples.json  worked-examples.md
hidden-reuse-result/scripts/: check_package.py  generate_appropriation.py  generate_examples.py  generate_figures.py  generate_firm_size.py  generate_ownership_access.py  generate_pledgeability.py  solve_appropriation.py  solve_firm_size.py  solve_ownership_access.py  solve_pricing.py  (+2 more)
(+31 files in other folders)
