[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "context-game"
version = "0.1.0"
description = "A Hayek-Arrow-Coase model of context sharing, withholding, and ownership"
requires-python = ">=3.9"
dependencies = [
  "numpy>=1.22",
  "matplotlib>=3.5",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

