[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hidden-reuse-game"
version = "0.6.0"
description = "Models of hidden AI context reuse, firm size, platform boundaries, and value appropriation"
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "Soren Larson" },
]
dependencies = [
  "numpy>=2.0,<3",
  "matplotlib>=3.9,<4",
]
keywords = [
  "artificial intelligence",
  "information economics",
  "incomplete contracts",
  "industrial organization",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4,<9",
  "ruff>=0.15,<0.16",
]

[project.urls]
Homepage = "https://hypersoren.xyz"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 88
target-version = "py39"
